--- a/index.html
+++ b/index.html
@@ -31,12 +31,9 @@
         padding: 15px;
 
     "> 
-        <p>这是我的个人网站</p>
-        <p>这是我的个人网站</p>
-        <p>这是我的个人网站</p>
-        <p>这是我的个人网站</p>
-        <p>这是我的个人网站</p>
-        <p>这是我的个人网站</p>
+        <p>横财就手</p>
+        <p>恭喜发财</p>
+        <p>兔年大吉</p>
 
     </div>
 
